# atmospheric_dispersion

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml
idl/: README.md  atmospheric_refraction.pro  atmospheric_refraction_shifts.pro  refractivity.pro
python/: Dispersion_examples.ipynb  README.md  __init__.py  atm_dispersion.py
sol_atm_dispaersion/: README.md  __init__.py
sol_atm_dispersion/: README.md  _version.py
